# Courses

./: README.md
apache-aiflow-complete-hands-on/: .gitignore  docker-compose.yaml  pyproject.toml
apache-aiflow-complete-hands-on/dags/: group_dag.py  parallel_dag.py  supergroup_dag.py  user_processing.py  xcom_dag.py
apache-aiflow-complete-hands-on/dags/groups/: groups_downloads.py  groups_transforms.py
apache-aiflow-complete-hands-on/dags/subdags/: subdag_downloads.py
apache-spark-programming-with-databricks/: ASP 1.5 - DataFrame & Column.py  ASP 2.2 - Datetimes.py  ASP 4.2 - Aggregating Streams.py  Version Info.py  manifest.mf
apache-spark-programming-with-databricks/Solutions/: ASP 1.4 - Reader & Writer.py  ASP 1.5 - DataFrame & Column.py  ASP 2.2 - Datetimes.py  ASP 3.3 - Partitioning.py  ASP 99 - OPTIONAL Processing Streams.py
apache-spark-programming-with-databricks/apache-spark-programming-with-databricks/: ASP 1.2 - Databricks Platform.py  ASP 1.3 - Spark SQL.py  ASP 1.4 - Reader & Writer.py  ASP 2.1 - Aggregation.py  ASP 2.4 - Additional Functions.py  ASP 2.5 - UDFs.py  ASP 3.2 - Query Optimization.py  ASP 3.4 - Review.py  ASP 4.1 - Streaming Query.py  ASP 4.3 - Delta Lake.py  ASP 99 - OPTIONAL Processing Streams.py
apache-spark-programming-with-databricks/apache-spark-programming-with-databricks/Solutions/: ASP 1.2 - Databricks Platform.py  ASP 1.3 - Spark SQL.py  ASP 2.1 - Aggregation.py  ASP 2.3 - Complex Types.py  ASP 2.4 - Additional Functions.py  ASP 2.5 - UDFs.py  ASP 3.4 - Review.py  ASP 4.1 - Streaming Query.py  ASP 4.3 - Delta Lake.py  (+1 more)
(+3 files in other folders)
